--- a/demo.html
+++ b/demo.html
@@ -7,5 +7,8 @@
 		<h1>Welcome to home page</h1>
                  <p>This is just demo of git</p>
 	</center>
+<div>
+ <h2>Helooo</h2>
+</div>
 </body>
 </html>
